--- a/app/css/app.css
+++ b/app/css/app.css
@@ -3,7 +3,8 @@ body {
   color: #292933;
   font-family: "Arial";
 }
-#wrapper {
+.wrapper {
+  flex: 50%;
   margin: 1rem;
   padding: 1rem;
   border: 2px solid;
@@ -42,8 +43,6 @@ footer li {
   display: none;
 }
 #results {
-  background-color: #292933;
-  color: #fff;
   font-family: monospace;
   padding: 1rem;
   font-size: 1.2rem;
